# src/api/generated/invoice-generation-pd-f.ts
@@ -1,14 +1,15 @@
 /**
- * Generated by orval v7.5.0 🍺
+ * Generated by orval v8.5.3 🍺
  * Do not edit manually.
  * invoice management system
  * OpenAPI spec version: 1.0.0
  */
-import axios from 'axios'
+import axios from 'axios';
 import type {
   AxiosRequestConfig,
   AxiosResponse
-} from 'axios'
+} from 'axios';
+
 
 
 
@@ -17,9 +18,9 @@ import type {
  * Generate an invoice in pdf format and returns it for saving on the client's machine.
  * @summary Generate and save an invoice in pdf format
  */
-export const getInvoicePDF = <TData = AxiosResponse<Blob>>(
+export const getInvoicePDF = (
     cardmarketExternalOrderId: number, options?: AxiosRequestConfig
- ): Promise<TData> => {
+ ): Promise<AxiosResponse<Blob>> => {
     return axios.get(
       `/v1/generateInvoicePDF/${cardmarketExternalOrderId}`,{
         responseType: 'blob',
@@ -30,13 +31,15 @@ export const getInvoicePDF = <TData = AxiosResponse<Blob>>(
  * Generates multiple invoices in PDF format and compresses them into a ZIP file.
  * @summary Download invoices as a ZIP file
  */
-export const getInvoicesPDF = <TData = AxiosResponse<string>>(
+export const getInvoicesPDF = (
     startDate: string,
     endDate: string, options?: AxiosRequestConfig
- ): Promise<TData> => {
+ ): Promise<AxiosResponse<Blob>> => {
     return axios.get(
-      `/v1/generateInvoicesPDF/${startDate}/${endDate}`,options
+      `/v1/generateInvoicesPDF/${startDate}/${endDate}`,{
+        responseType: 'blob',
+    ...options,}
     );
   }
 export type GetInvoicePDFResult = AxiosResponse<Blob>
-export type GetInvoicesPDFResult = AxiosResponse<string>
+export type GetInvoicesPDFResult = AxiosResponse<Blob>
